# JoJo.Poetry

./: .gitignore  .prettierignore  .prettierrc  ANALYTICS-ARCHITECTURE.md  ANALYTICS-FLOW.md  ANALYTICS-Not a Metaphor.json  CLAUDE.md  Dockerfile  Dockerfile-gcloud  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  To Do.md  Visualisations.md  docker-compose.yml  eslint.config.mjs  gcloud-deploy.sh  gcloud-logs.sh  gcloud-update.sh  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.ts  tsconfig.json  xxx.json
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  plotly-export.d.ts
app/awards/: page.tsx
app/clusters/: page.tsx
app/components/: ActionButton.tsx  AdvancedSearchDialog.tsx  AppConfig.tsx  AwardsPageClient.tsx  ClusteringUI.tsx  ClustersPageClient.tsx  CopyButton.tsx  DeleteButton.tsx  DialogTitle.tsx  ErrorMessage.tsx  FontSelector.tsx  Header.tsx  HorizontalRule.tsx  LColumn.tsx  LoadingMessage.tsx  NotesEditor.tsx  PDFButton.tsx  Page.tsx  PinToggle.tsx  PoemAward.tsx  PoemBody.tsx  PoemContest.tsx  PoemCreateForm.tsx  PoemDetail.tsx  PoemEditor.tsx  PoemEditorForm.tsx  PoemList.tsx  PoemListSection.tsx  PoemListing.tsx  PoemMetadataEditor.tsx  PoemProject.tsx  PoemRow.tsx  PoemRowEditor.tsx  PoemStatistics.tsx  PoemSummary.tsx  (+13 more)
database/: Just Enough Freedom.json  Load-Bearing Interior.json  Not a Metaphor.json  Poems.json  Unchecked.json  Weather Over Brief Structures.json
server/: Dockerfile  __init__.py  api.py  app.py  config.py  repository.py  types.py
(+159 files in other folders)
