[project]
name = "jojo-poetry-server"
version = "0.1.0"
description = "FastAPI backend for JoJo.Poetry"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
    "jsonschema==4.23.0",
]
